objects/Cloud_Demand_Large_Deal_Proxy__c.object
<CustomObject>
    <fields>
        <fullName>CPU__c</fullName>
        <label>CPU</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GB_RAM__c</fullName>
        <label>GB RAM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GHz__c</fullName>
        <label>GHz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPU__c</fullName>
        <label>VPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>The list will hold the Cloud Demand Large Deal Proxy values</description>
    <label>Cloud Demand Large Deal Proxy</label>
</CustomObject>